# avp64_sw_zephyr

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  Readme.md  build.sh  west.yml
app/hello_world/: CMakeLists.txt  prj.conf
app/hello_world/boards/: avp64.overlay
app/hello_world/src/: main.c
boards/arm64/avp64/: Kconfig.avp64  Kconfig.defconfig  avp64.dts  avp64_avp64_x1.dts  avp64_avp64_x1_defconfig  avp64_avp64_x2.dts  avp64_avp64_x2_defconfig  avp64_avp64_x4.dts  avp64_avp64_x4_defconfig  avp64_avp64_x8.dts  avp64_avp64_x8_defconfig  avp64_defconfig  board.yml
docker/: Dockerfile  entrypoint.sh
drivers/: CMakeLists.txt  Kconfig
drivers/vcml_simdev/: CMakeLists.txt  Kconfig  vcml_simdev.c  vcml_simdev_registers.h
dts/bindings/: vendor-prefixes.txt
dts/bindings/vcml_simdev/: vcml.simdev.yaml
include/app/drivers/: vcml_simdev.h
soc/arm64/avp64/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  mmu_regions.c  soc.c  soc.yml
vp_config/: zephyr.cfg
zephyr/: module.yml
